# RTLGenie

./: .gitignore  .gitmodules  LLM_CONFIG  README.md  chainlit_main.py  generate_tb.py  graph2tasks.py  llm_config.sh  main.py  plan2graph.py  prompts.py  pyproject.toml  run.sh  spec2plan.py  tasks2rtl.py  utils.py  verify_rtl.py  visualize_graph.py
sample_logs/: Prob154_fsm_ps2data
