[project]
name = "rtlgenie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncer==0.0.7",
    "autogen[bedrock,openai]==0.8.5",
    "chainlit==2.5.5",
    "langchain>=0.3.23",
    "langchain-aws>=0.2.18",
    "langchain-openai>=0.3.24",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "pyqt6>=6.9.0",
    "vcdvcd>=2.3.6",
]
[tool.uv]
override-dependencies = [
    "asyncer==0.0.7"
]
